--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-  "version": 2,
+  "version": 3,
   "functions": {
     "src/index.ts": {
-      "runtime": "nodejs20.x"
+      "runtime": "vercel-node@3.0.0"
     }
   },
   "routes": [
