--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,5 @@
 {
-  "version": 3,
-  "functions": {
-    "src/index.ts": {
-      "runtime": "vercel-node@3.0.0"
-    }
-  },
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/src/index.ts"
-    }
-  ]
+  "version": 2,
+  "builds": [{ "src": "src/index.ts", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/src/index.ts" }]
 }
